home component improved, color changed

--- a/src/app/auth/containers/login/login.component.html
+++ b/src/app/auth/containers/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="login-header">
     <div class="translate-box" >
       <div class="translate">
-      <img class="icon" src="assets/images/translate.svg" alt="translate">
+        <img class="icon" src="assets/images/translate.svg" alt="translate">
       </div>
     </div>
     <img class="logo" src="assets/images/logo.svg">
@@ -36,6 +36,7 @@
       <img class="button-image" src="https://biiz-bucket.s3.us-east-2.amazonaws.com/iiz.png">
     </div>
   </div>
+  <img class="atlantis" src="https://biiz-bucket.s3.us-east-2.amazonaws.com/atlantis-logo-gray.png"/>
 
   <ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
     <ng-template>
