--- a/src/app/passengers/containers/experiences/experiences.component.scss
+++ b/src/app/passengers/containers/experiences/experiences.component.scss
@@ -17,7 +17,7 @@
   @include flex-center;
   font-weight: bold;
   align-self: flex-end;
-  background-color: $green;
+  background-color: $blue;
   color: $black;
   margin: 1.5rem;
   width: 7.4rem;
