--- a/src/app/passengers/containers/home/home.component.html
+++ b/src/app/passengers/containers/home/home.component.html
@@ -10,7 +10,7 @@
       </div>
       <app-white-button message="SOLICITAR UNIDAD"></app-white-button>
     </section>
-    <section class="experience-container" (click)="goToPath('passenger/events')">
+    <section class="events-container" (click)="goToPath('passenger/events')">
       <app-white-button message="EVENTOS"></app-white-button>
     </section>
     <section class="shared-container">
