--- a/src/app/passengers/containers/traveling/traveling.component.scss
+++ b/src/app/passengers/containers/traveling/traveling.component.scss
@@ -44,7 +44,7 @@
 
   .center {
     width: 90%;
-    color: $green;
+    color: $blue;
     font-size: 6rem;
 
     .icon {
@@ -70,7 +70,7 @@
 
 .green-label {
   z-index: 1;
-  background-color: $green;
+  background-color: $blue;
   display: flex;
   width: 90%;
   height: 6rem;
