--- a/src/app/passengers/containers/user-info/user-info.component.scss
+++ b/src/app/passengers/containers/user-info/user-info.component.scss
@@ -76,7 +76,7 @@
 
 .btn-id {
   width: 50%;
-  background-color: $green;
+  background-color: $blue;
   color: $black;
 }
 
@@ -95,7 +95,7 @@
 
   .soon {
     text-align: center;
-    background-color: $green;
+    background-color: $blue;
     position: absolute;
     border-radius: 0.4rem;
     font-size: 0.8rem;
