--- a/src/styles.scss
+++ b/src/styles.scss
@@ -84,7 +84,7 @@ a {
 }
 
 .green-radio:checked {
-  background-color: $green;
+  background-color: $blue;
   background-image: url('assets/images/check.svg');
   background-size: 90% 90%;
 }
