--- a/src/app/core/sass/_colors.scss
+++ b/src/app/core/sass/_colors.scss
@@ -1,14 +1,15 @@
 // Primary Colors
 $white: #FFF;
 $black: #000;
-$green: #00E741;
-$red: #E3000B;
+$blue: #00E741;
+$blue: #006CFF;
+$red: #F52544;
 $line: #D5DDE0;
 $yellow: #FAFF00;
 
 $scheme: (
-    biiz-green: (
-        default: #00E741
+    biiz-blue: (
+        default: #006CFF
     ),
     firm-gray: (
         default: #CFCFCF,
