--- a/src/app/passengers/containers/events/events.component.scss
+++ b/src/app/passengers/containers/events/events.component.scss
@@ -11,7 +11,7 @@
 }
 
 .icon {
-  color: $green;
+  color: $blue;
   font-size: 4rem;
 }
 
@@ -42,20 +42,11 @@
     width: 90%;
   }
 
-  .text {
-    margin: 0;
-  }
-
   .events-container {
     width: 100%;
     display: flex;
     overflow-x: scroll;
   }
-}
-
-.button-image {
-  position: absolute;
-  right: 2rem;
 }
 
 .event-info {
@@ -117,6 +108,6 @@
 .scan {
   font-size: 4rem;
   margin-top: 2rem;
-  background-color: $green;
+  background-color: $blue;
   border-radius: 50%;
 }
