--- a/src/app/passengers/containers/trip-detail/trip-detail.component.scss
+++ b/src/app/passengers/containers/trip-detail/trip-detail.component.scss
@@ -44,14 +44,14 @@
   }
 
   .check {
-    color: $green;
+    color: $blue;
     font-size: 6.5rem;
   }
 
   .card {
     display: flex;
     justify-content: flex-end;
-    background-color: $green;
+    background-color: $blue;
     width: 90%;
     padding: 0.5rem;
     font-size: 3rem;
