--- a/src/app/shared/buttons/components/base-button.component.scss
+++ b/src/app/shared/buttons/components/base-button.component.scss
@@ -29,7 +29,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: $green;
+  background-color: $blue;
   width: 2.5rem;
   height: 1.5rem;
   border-radius: 0.4rem;
@@ -41,4 +41,9 @@
     font-size: 1.2rem;
     color: $black;
   }
+}
+
+.logo {
+  position: absolute;
+  right: 2rem;
 }
