--- a/src/app/shared/buttons/components/secondary-button/secondary-button.component.scss
+++ b/src/app/shared/buttons/components/secondary-button/secondary-button.component.scss
@@ -19,7 +19,7 @@
 
 .icon-container {
   @include flex-center;
-  background-color: $green;
+  background-color: $blue;
   width: 3.3rem;
   height: 2rem;
   border-radius: 0.4rem;
