--- a/src/app/shared/buttons/components/toggle-button/toggle-button.component.scss
+++ b/src/app/shared/buttons/components/toggle-button/toggle-button.component.scss
@@ -25,7 +25,7 @@
     height: 1.5rem;
     border-radius: 50%;
     transition: transform 0.3s ease;
-    background-color: $green;
+    background-color: $blue;
   }
 
   .toggle-label {
