--- a/src/app/shared/buttons/components/white-button/white-button.component.scss
+++ b/src/app/shared/buttons/components/white-button/white-button.component.scss
@@ -24,7 +24,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: $green;
+  background-color: $blue;
   width: 2.5rem;
   height: 1.5rem;
   border-radius: 0.4rem;
@@ -39,5 +39,5 @@
 
 
 .green {
-  background-color: $green;
+  background-color: $blue;
 }
