--- a/src/app/shared/calendar/components/calendar.component.scss
+++ b/src/app/shared/calendar/components/calendar.component.scss
@@ -21,7 +21,7 @@
   }
 
   .selected {
-    background-color: $green;
+    background-color: $blue;
     color: $black;
     border-radius: 0.3rem;
   }
@@ -151,19 +151,19 @@
   height: 2.3rem;
   font-weight: bold;
   border-radius: 0.5rem;
-  background-color: $green;
+  background-color: $blue;
   color: $black
 }
 
 .custom-input {
   border: none;
   border-radius: 0.5rem;
-  background-color: $green;
+  background-color: $blue;
   font-weight: bold;
   font-size: 1rem;
   height: 2.1rem;
   width: 2.9rem;
   margin-bottom: 0;
-  text-align: center; 
-  outline: none; 
+  text-align: center;
+  outline: none;
 }
