--- a/src/app/shared/header/components/header/header.component.scss
+++ b/src/app/shared/header/components/header/header.component.scss
@@ -12,7 +12,7 @@
 
   .icon {
     padding: 0.4rem;
-    background-color: $green;
+    background-color: $blue;
     font-size: 1.1rem;
     font-weight: bold;
     border-radius: 50%;
@@ -65,12 +65,12 @@
   }
 
   .translate {
-    background-color: $green;
+    background-color: $blue;
     height: 3.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0.9rem 0.2rem 0.3rem;
+    padding: 0.7rem;
     border-radius: 0 0.5rem 0.5rem 0;
   }
 }
