--- a/src/app/shared/header/components/profile-header/profile-header.component.scss
+++ b/src/app/shared/header/components/profile-header/profile-header.component.scss
@@ -26,7 +26,7 @@
 
 .icon {
   margin-bottom: 0.5rem;
-  background-color: $green;
+  background-color: $blue;
   border-radius: 50%;
   font-size: 1.8rem;
   padding: 0.2rem;
