--- a/src/app/shared/timer/components/timer.component.scss
+++ b/src/app/shared/timer/components/timer.component.scss
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
   position: relative;
-  background-color: $green;
+  background-color: $blue;
   border-radius: 0.5rem;
 
   .progress-bar {
