--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -6,12 +6,12 @@
 /* https://ionicframework.com/docs/theming/color-generator */
 
 :root {
-	--ion-color-primary: #00E741;
+	--ion-color-primary: #006CFF;
 	--ion-color-primary-rgb: 0,231,65;
 	--ion-color-primary-contrast: #000000;
 	--ion-color-primary-contrast-rgb: 0,0,0;
-	--ion-color-primary-shade: #00cb39;
-	--ion-color-primary-tint: #1ae954;
+	--ion-color-primary-shade: #006CFF;
+	--ion-color-primary-tint: #006CFF;
 
 	--ion-color-secondary: #000;
 	--ion-color-secondary-rgb: 0,0,0;
@@ -27,12 +27,12 @@
 	--ion-color-tertiary-shade: #4854e0;
 	--ion-color-tertiary-tint: #6370ff;
 
-	--ion-color-success: #00E741;
+	--ion-color-success: #006CFF;
 	--ion-color-success-rgb: 0,231,65;
 	--ion-color-success-contrast: #000000;
 	--ion-color-success-contrast-rgb: 0,0,0;
-	--ion-color-success-shade: #00cb39;
-	--ion-color-success-tint: #1ae954;
+	--ion-color-success-shade: #006CFF;
+	--ion-color-success-tint: #006CFF;
 
 	--ion-color-warning: #FAFF00;
 	--ion-color-warning-rgb: 250,255,0;
