blue lines added in routes

--- a/src/app/core/sass/_colors.scss
+++ b/src/app/core/sass/_colors.scss
@@ -1,7 +1,7 @@
 // Primary Colors
 $white: #FFF;
 $black: #000;
-$blue: #00E741;
+$green: #00E741;
 $blue: #006CFF;
 $red: #F52544;
 $line: #D5DDE0;
