--- a/src/app/passengers/containers/airport-trip/airport-trip.component.scss
+++ b/src/app/passengers/containers/airport-trip/airport-trip.component.scss
@@ -58,3 +58,14 @@
     width: 100%;
   }
 }
+
+.form {
+  width: 100%;
+
+  .input {
+    border: none;
+    outline: none;
+    width: 90%;
+    height: 5rem;
+  }
+}
