--- a/src/app/passengers/containers/events/events.component.html
+++ b/src/app/passengers/containers/events/events.component.html
@@ -8,18 +8,27 @@
       <div class="img">
         <img class="logo" src="assets/images/location-arrows.svg">
       </div>
-      <div class="input-wrapper">
-        <ion-input
-          [(ngModel)]="currentAddress"
-          placeholder="Dirección actual"
-          [readonly]="true"
-        ></ion-input>
-        <ion-input
-          [(ngModel)]="eventName"
-          placeholder="Evento"
-          [readonly]="true"
-        ></ion-input>
-      </div>
+      <form [formGroup]="addressForm" class="form">
+        <div class="input-wrapper">
+          <input
+            [(ngModel)]="currentAddress"
+            [readonly]="true"
+            placeholder="Dirección actual"
+            formControlName="startAddress"
+            class="input"
+            required
+          >
+        </div>
+        <div class="input-wrapper">
+          <input
+            [(ngModel)]="eventName"
+            [readonly]="true"
+            placeholder="Evento"
+            formControlName="endAddress"
+            class="input"
+          >
+        </div>
+      </form>
     </div>
     <ion-icon
       (click)="scan()"
