--- a/src/app/passengers/containers/events/events.component.scss
+++ b/src/app/passengers/containers/events/events.component.scss
@@ -111,3 +111,14 @@
   background-color: $blue;
   border-radius: 50%;
 }
+
+.form {
+  width: 100%;
+
+  .input {
+    border: none;
+    outline: none;
+    width: 90%;
+    height: 5rem;
+  }
+}
